# social_network

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  .pydocstyle  Dockerfile  pyproject.toml
backend/scripts/: docker-entrypoint.sh
backend/scripts/databases/db/: db.dump.sql
backend/scripts/databases/grafana/: grafana.dump.sql
backend/social_network/: asgi.py  urls.py  wsgi.py
backend/social_network/apps/activity/: admin.py  apps.py  middlewares.py  models.py  serializers.py  urls.py  views.py
backend/social_network/apps/activity/migrations/: 0001_initial.py
backend/social_network/apps/analytics/: apps.py  serializers.py  urls.py  views.py
backend/social_network/apps/common/: serializers.py
backend/social_network/apps/posts/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/social_network/apps/posts/migrations/: 0001_initial.py
backend/social_network/apps/users/: apps.py
backend/social_network/apps/users/management/commands/: createsuperuser_.py
backend/social_network/settings/: common.py
